--- a/FE/mini-mart/src/pages/users/theme/header/style.scss
+++ b/FE/mini-mart/src/pages/users/theme/header/style.scss
@@ -63,17 +63,86 @@
         
         li:last-child {
             cursor: pointer;
-            margin-left: 10px;
+            margin-left: 15px;
 
             span {
                 font-size: 14px;
-                margin-left: 2px;
+                margin-left: 5px;
             }
         }
 
        
     }
+   
+}
+.header__logo {
+    padding: 15px 0;
+}
 
+.header__menu {
+    padding: 24px 0;
+    ul {
+        display: flex;
+        justify-content: space-between;
 
+        li {
+            list-style: none;
+
+            a{
+                text-decoration: none;
+                font-weight: 400;
+                font-size: 14px;
+                color: map-get($theme-colors, "bold-text" );
+                text-transform: uppercase;
+                letter-spacing: 2px;
+                transition: all 0.3s;
+                padding: 5px 0;
+                display: block;
+            }
+        }
+        .active a{
+            color: map-get($theme-colors, "main" );
+
+        }
+    }
     
+}
+
+.header__cart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+
+    ul {
+        display: flex;
+        margin-right: 25px;
+
+        li {
+            list-style: none;
+            position: relative;
+            margin-left: 20px;
+
+            svg {
+                font-size: 25px;
+                color: map-get($theme-colors, "normal-text" );
+            }
+            span {
+                color: white;
+                background: map-get($theme-colors ,"main" );
+                position: absolute;
+                height: 20px;
+                width: 20px;
+                border-radius: 50%;
+                display: inline-block;
+                text-align: center;
+                line-height: 20px;
+                font-size: 13px;
+                font-weight: 500 ;
+                left: 20px;
+                top: -2px;
+            }
+        }
+        
+    }
 }
