--- a/FE/mini-mart/src/style/pages/all.scss
+++ b/FE/mini-mart/src/style/pages/all.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 @import "theme.scss";
+@import "Responsive";
 
 html,
 body {
@@ -29,4 +30,26 @@ body {
 .col-6 {
     flex: 0 0 50%;
     max-width: 50%;
+}
+
+@include Responsive($MEDIUM_DEVICEs) {
+    .col-lg-3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+    .col-lg-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+}
+
+@include Responsive($DESKTOP) {
+    .col-xl-3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+    .col-xl-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
 }
