--- a/FE/mini-mart/src/pages/users/homePage/style.scss
+++ b/FE/mini-mart/src/pages/users/homePage/style.scss
@@ -7,39 +7,209 @@
 
 
     .categories_slider{
-        // width: 100%;
+         
         .categories_slider_items{
-            height: 500px;
+            height: 500px;          
             position: relative;
             background-repeat: no-repeat;
             background-size: cover;
             background-position:top center;
             border-radius: 5px;
-
+            overflow: hidden;
+            
             p{
                 position: absolute ;
-                 left: 5% ;
-                 bottom: 20px;
+                 left: 10% ;
+                 bottom: 10px;
                 text-align: center;
                 font-size: 18px;
-                color: map-get($theme-colors, "normal-text" );
-                font-weight: 700;
+                color: rgb(237 237 237);
+                font-weight: 600;
                 text-transform: uppercase;
                 letter-spacing: 2px;
-                padding: 12px 0 10px;
-                width: 270px;
+                padding: 10px 0 10px;
+                width: 250px;
                 cursor: pointer;
                 
+
                 &:hover{
-                    background: rgb(237 237 237);
+                    background: map-get($theme-colors, "main" );
+                    color: rgb(237 237 237);
+                    border-radius: 50px;
+
+        
+    }
+            }
+
+
+
+           
+    } 
+        
+        // .react-multi-carousel-item{
+        //     width:270px ;
+        // }
+        .react-multi-carousel-item:not(:first-child):not(:last-child){
+                margin-right: 1px;
+                margin-left: 1px;
+                padding: 0 3px 0 3px;
+                
+        }
+       
+    }
+}
+
+.featured{
+    margin-top: 50px ;
+
+    .section-title{
+        margin-bottom: 50px;
+
+        text-align: center;
+
+        h2{
+            position: relative;
+        }
+
+        h2:after{
+            position: absolute;
+            left: 0;
+            bottom: -15px;
+            right: 0;
+            height: 4px;
+            width: 80px;
+            background: map-get($theme-colors, "main" );
+            content: "";
+            margin: 0 auto;
+
+        }
+    }
+
+    .react-tabs{
+
+        ul{
+            display: flex;
+            justify-content: center;
+            margin-bottom: 50px;
+        }
+
+        li {
+            list-style: none;
+            font-size: 18px;
+            color: map-get($theme-colors, "normal-text" );
+            display: inline-block;
+            margin-right: 25px;
+            position: relative;
+            cursor: pointer;      
+          }
+    }
+
+    .featured__item{
+        margin-bottom: 50px;
+        margin-left:  25px; 
+
+        &:hover{
+            .featured__item__pic__hover{
+                bottom: -15%  !important;
+            }
+        }
+
+        .featured__item__pic{
+            height: 270px;
+            position: relative;
+            overflow: hidden;
+            background-position:center ;
+
+           
+           
+          
+
+            // .backgroundImage{
+            //     width: 250px;
+            //     height: 250px;
+            // }
+
+            .featured__item__pic__hover{
+                position: absolute;
+                left: 0;
+                bottom: -40%;
+                width: 100%;
+                text-align: center;
+                transition:  all 0.5s;
+
+                li{
+                    list-style: none;
+                    display: inline-block;
+                    margin-right: 10px;
+
+                    &:hover {
+                        svg{
+                            background: #7fad39;
+                            border-color: #7fad39;
+                            border-radius: 50px;
+                            color: #ffffff;
+                            transform: rotate(360deg) !important;
+                        }
+                    }
+
+                    svg {
+                        padding: 10px;
+                        height: 20px;
+                        width: 20px;
+                        border: 1px ;
+                        background: #ffffff;
+                        border-radius: 50px;
+                        color: #1acc23;
+                        transform: all 0.3s;
+                    }
                 }
             }
         }
 
-        .react-multi-carousel-item:not(:first-child):not(:last-child){
-                 margin-right: 2px;
-                margin-left: 5px;
+        .featured__item__text{
+            text-align: center;
+           
+
+            h6{
+                margin-top: 10px;
+                font-size: 16px;
+                font-weight: 400;
+
+                a{
+                    color: map-get($theme-colors , "main" );
+                    text-decoration: none;
+                }
+            }
+            h5{
+                margin-top: 10px;
+                font-size: 16px;
+                font-weight: 400;
+                border:  1px solid#1acc23;
+
+                a{
+                    color: map-get($theme-colors , "main" );
+                    text-decoration: none;
+                    
+                }
+            }
         }
 
     }
 }
+
+
+.banner{
+    margin-left: 10%;
+    display: flex;
+    gap: 30px  ;
+    margin-bottom: 30px;
+   
+
+    // .baner__pic{
+    //     image{
+    //         border-radius: 20px;
+    //     };
+    // }
+    
+}
+
