--- a/FE/mini-mart/src/pages/users/theme/header/style.scss
+++ b/FE/mini-mart/src/pages/users/theme/header/style.scss
@@ -324,8 +324,8 @@
 
     .hero__items{
         width: 100%;
-        background-image: url("https://th.bing.com/th/id/OIP.OjyWZthszkGBf6usO7aSzgHaE8?rs=1&pid=ImgDetMain");
-        // background-repeat: no-repeat;
+        //background-image: url("https://www.pcgamesn.com/wp-content/sites/pcgamesn/2022/09/Valorant-Riot-approved-butterfly-knife-tricks.jpg");
+        //background-repeat: no-repeat;
         background-size:cover ;
         height: 410px;
         display: flex;
