--- a/FE/mini-mart/src/pages/users/theme/header/style.scss
+++ b/FE/mini-mart/src/pages/users/theme/header/style.scss
@@ -1,5 +1,5 @@
 @use "sass:map";
-@import "style/pages/theme.scss";
+@import "style/pages/all.scss";
 
 
 .header_top {
@@ -441,4 +441,199 @@
        
     }
     
+}
+
+.humberger__menu__wrapper{
+    display: none;
+}
+.humberger__open{
+    display: none;
+}
+
+
+@include Responsive($TABLET_DEVICEs) {
+    .header_top,
+    .header__menu,
+    .header__cart{
+        display: none;
+    }
+
+    .humberger__open{
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        height: 100%;
+
+        svg {
+            font-size: 40px;
+            cursor: pointer;
+            color: map-get($theme-colors, "normal-text" );
+        }
+    }
+    .humberger__menu__wrapper{
+        position: fixed;
+        width: 300px;
+        background: #ffffff;
+        height: 100%;
+        overflow-y: auto ;
+        z-index: -9999;
+        padding: 30px;
+        padding-top: 50px;
+
+        opacity: 0;
+        display: block;
+        transition: all 0.6s;
+
+        &.show{
+            opacity: 1;
+            z-index: 9999;
+        }
+        
+    }
+
+    .humberger__menu__overlayer{
+        position: fixed;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        background: rgba(0, 0,0, 0.5);
+        z-index: 100;
+        visibility: hidden;
+        transition: all, 0.3s;
+
+        &.active{
+            visibility: visible !important;
+        }
+    }
+    .humberger__menu__cart{
+        display: flex;
+        margin-bottom: 25px;
+
+        .header__cart__price{
+            font-size: 14px;
+            color: #6f6f6f;
+
+            span{
+                color: map-get($theme-colors, "bold-text" );
+                font-weight: 700;
+            }
+        }
+
+        ul{
+            list-style: none;
+            margin-right: 15px;
+            display: inline-block;
+
+            li:last-child{
+                margin-right: 0;
+            }
+
+            li{
+                position: relative;
+
+                a{
+                    font-size: 18px;
+                    color: map-get($theme-colors, "normal-text" );
+
+
+                    span{
+                        color: white;
+                        background: map-get($theme-colors, "main" );
+                        height: 10px;
+                        left: 10px;
+                        top: -10px;
+                        border-radius: 40px;
+                        text-align: center;
+                        line-height: 20px;
+                        display: inline-block;
+                        position: absolute;
+                        font-size: 13px;
+                        padding: 0px 7px;
+                        font-weight: 500;
+                    }
+                }
+            }
+        }
+    }
+    .humberger__menu__widget{
+            margin-bottom: 20px;
+
+        .header__top__right__auth a{
+            display: block;
+            font-size: 14px;
+            color: map-get($theme-colors, "normal-text" );
+            text-decoration: none;
+        }
+    }
+
+    .humberger__menu__navbar{
+        margin-bottom: 20px;
+
+        ul{
+            list-style: none;
+
+                li{
+                    padding: 8px 0;
+                    border-bottom: 1px solid #e1e1e1;
+
+                        a{
+                            color: map-get($theme-colors, "normal-text" );
+                            font-size: 16px;    
+                            font-weight: 500;
+                            text-decoration: none;
+                        }
+
+                        svg{
+                            vertical-align: middle;
+                            margin-left: 6px;
+                        }
+                }
+        }
+
+        .header__menu__drop{
+            display: none;
+            padding: 5px 0;
+
+                li{
+                    margin-left: 10px;
+                    display: block;
+                    margin-right: 0;
+
+                    &:last-child{
+                        border-bottom: unset;
+                    }
+                }
+        }
+        .show__submenu{
+            display: block;
+        }
+    }
+
+    .header__top__right__social{
+        display: block;
+        margin-right: 0;
+        margin-bottom: 20px;
+
+
+            a{
+                font-size: 14px;
+                display: inline-block;
+                color: map-get($theme-colors, "normal-text" );
+                margin-right: 25px;
+
+                svg{
+                    font-size: 20px;
+                }
+        }
+    }
+    .humberger__menu__contact{
+
+        ul li{
+            font-size: 14px;
+            display: inline-block;
+            color: map-get($theme-colors, "normal-text" );
+            margin-bottom: 10px;
+        }
+    }
 }
